--- a/css/index.css
+++ b/css/index.css
@@ -56,3 +56,7 @@ input[type="checkbox"]:checked:before {
   background-color: Green;
   font-size: 15px;
 }
+#confirmselection {
+  padding: auto;
+  margin: 1em;
+}
